--- a/.classpath
+++ b/.classpath
@@ -2,23 +2,23 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/common/hadoop-common-3.4.1.jar" sourcepath="C:/hadoop/hadoop-3.4.1"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/common/hadoop-common-3.4.1-tests.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/common/hadoop-kms-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/common/hadoop-nfs-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/common/hadoop-registry-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/mapreduce/hadoop-mapreduce-client-app-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/mapreduce/hadoop-mapreduce-client-common-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/mapreduce/hadoop-mapreduce-client-core-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-plugins-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-3.4.1-tests.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/mapreduce/hadoop-mapreduce-client-nativetask-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/mapreduce/hadoop-mapreduce-client-shuffle-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/mapreduce/hadoop-mapreduce-client-uploader-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/mapreduce/hadoop-mapreduce-examples-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/common/lib/slf4j-api-1.7.36.jar"/>
-	<classpathentry kind="lib" path="C:/hadoop/hadoop-3.4.1/share/hadoop/common/lib/slf4j-reload4j-1.7.36.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-common-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-common-3.4.1-tests.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-kms-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-mapreduce-client-app-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-mapreduce-client-common-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-mapreduce-client-core-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-mapreduce-client-hs-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-mapreduce-client-hs-plugins-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-mapreduce-client-jobclient-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-mapreduce-client-jobclient-3.4.1-tests.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-mapreduce-client-nativetask-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-mapreduce-client-shuffle-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-mapreduce-client-uploader-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-mapreduce-examples-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-nfs-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/hadoop-registry-3.4.1.jar"/>
+	<classpathentry kind="lib" path="jars/slf4j-api-1.7.36.jar"/>
+	<classpathentry kind="lib" path="jars/slf4j-reload4j-1.7.36.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
